<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_item1"
            android:title="@string/item1" />
        <item
            android:id="@+id/nav_item2"
            android:title="@string/item2" />
        <item
            android:id="@+id/nav_item3"
            android:title="@string/item3" />
        <item
            android:id="@+id/nav_item4"
            android:title="@string/item4" />
        <item
            android:id="@+id/nav_ScrollingActivity"
            android:title="@string/item5" />
        <item
            android:id="@+id/nav_item6"
            android:title="@string/item6" />
        <item
            android:id="@+id/nav_item7"
            android:title="@string/item7" />
        <item
            android:id="@+id/nav_item8"
            android:title="@string/item8" />
        <item
            android:id="@+id/nav_item9"
            android:title="@string/item9" />
        <item
            android:id="@+id/nav_item10"
            android:title="@string/item10" />
    </group>
</menu>
