<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/fragment_item6"
    tools:context="com.example.robot.test.fragments.item6">

    <TextView style="@style/textViewFr6"
        android:text="@string/password"
        android:layout_below="@+id/editText"
        android:layout_alignParentLeft="true"
        android:id="@+id/textView11" />

    <TextView style="@style/textViewFr6"
        android:text="@string/email"
        android:id="@+id/textView10"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText style="@style/editTextFr6"
        android:inputType="textEmailAddress"
        android:id="@+id/editText"
        android:layout_below="@+id/textView10" />

    <EditText style="@style/editTextFr6"
        android:inputType="textPassword"
        android:id="@+id/editText2"
        android:layout_below="@+id/textView11" />

    <Button
        android:text="@string/login"
        android:layout_height="wrap_content"
        android:id="@+id/button"
        android:layout_width="fill_parent"
        android:layout_below="@+id/editText2" />

    <Button style="@style/wrap"
        android:text="@string/home"
        android:layout_below="@+id/button"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/button2" />

    <Button style="@style/wrap"
        android:text="@string/sign_up"
        android:layout_below="@+id/button"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:id="@+id/button3" />

</RelativeLayout>
